--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div id="header">
+	<section id="header">
 		<div class="container">
 			<div class="nav">
 				<div class="logo">
@@ -36,12 +36,103 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div id="sambutan">
-		<div class="container">
-			sdsdsd
+	<section class="halaman">
+		<div class="konten">
+			<div class="kepsek">
+				<h1>Sambutan Kepala Sekolah SMP Negeri 1 Cibadak</h1>
+			</div>
+			<div class="isi">
+				<p>Puji syukur kita panjatkan kehadirat Allah SWT.yang senantiasa dengan sifat kasih dan sayangnya banyak memberikan  nikmat yang senantiasa tidak terhenti tercurah dan semoga kita termasuk orang yang pandai bersyukur dan dapat memanfa...</p>
+			</div>
+			<div class="tombol">
+				<a href="#" class="tbl1">Lebih lanjut</a>
+			</div>
+			<div class="list">
+				<div class="fasilitas">
+					<img src="asset/img/fasilitas.png">
+					<br>
+					<a href="#">Fasilitas</a>
+				</div>
+				<div class="lokasi">
+					<img src="asset/img/lokasi.png">
+					<br>
+					<a href="#">Lokasi</a>
+				</div>
+				<div class="sejarah">
+					<img src="asset/img/sejarah.png">
+					<br>
+					<a href="#">Sejarah</a>
+				</div>
+				<div class="prestasi">
+					<img src="asset/img/prestasi.png">
+					<br>
+					<a href="#">Prestasi</a>
+				</div>
+			</div>
 		</div>
-	</div>
+
+		<div class="berita">
+			<div class="isi-berita">
+				<h1>BERITA</h1>
+				<div class="list-berita">
+					<div class="b1">
+						<img src="asset/img/b1.jpg">
+						<br>
+						<a href="#">Kegiatan Belajar mengajar di rumah</a>
+					</div>
+					<div class="b2">
+						<img src="asset/img/b3.jpg">
+						<br>
+						<a href="#">Kegiatan Belajar mengajar di rumah...</a>
+					</div>
+					<div class="b3">
+						<img src="asset/img/b1.jpg">
+						<br>
+						<a href="#">Kegiatan Belajar mengajar di rumah</a>
+					</div>
+					<div class="b4">
+						<img src="asset/img/b3.jpg">
+						<br>
+						<a href="#">Kegiatan Belajar mengajar di rumah</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="bawah">
+			<div class="kontak">
+				<div class="hal-umum">
+					<h3>Halaman Umum</h3>
+					<a href="#">Data Guru</a>
+					<br>
+					<a href="#">Profil Sekolah</a>
+					<br>
+					<a href="#">PPDB SMPN 1 Cibadak</a>
+					<br>
+					<a href="#">Panduan PPDB</a>
+				</div>
+				<div class="contact">
+					<h3>Contact</h3>
+					<p>Jl. Siliwangi No 123, Cibadak, Cibadak, Sukabumi, Jawa Barat 43351, Indonesia, (0266)531333</p>
+					<br>
+					<p>Email : info@smpn1cibadak.sch.id smpn1cbd_kabsi@yahoo.co.id</p>
+				</div>
+				<div class="sosial">
+					<h3>Halaman Umum</h3>
+					<div class="fb">
+						<img src="asset/img/fb.png">
+					</div>
+					<div class="tw">
+						<img src="asset/img/tw.png">
+					</div>
+					<div class="g+">
+						<img src="asset/img/gl.png">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
