--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="footer">
+			<div class="cp">
+				sdsad
+			</div>
+		</div>
 	</section>
 </body>
 </html>
