--- a/index.html
+++ b/index.html
@@ -102,6 +102,59 @@
 		</div>
 
 		<div class="bawah">
+
+			<div class="profil">
+				<div class="profil-sekolah">
+					<h1>PROFIL SEKOLAH</h1>
+					<div class="isi-profil">
+						<div class="video">
+							<h1>Space Video</h1>
+						</div>
+						<div class="capt">
+							<p>Di samping adalah profil sekolah kami secara keseluruhan dari mulai bagian depan hingga seluruh fasilitas yang terdapat disekolah kami kami akan memberikan yang terbaik untuk kenyamanan para siswa kami dalam menimba ilmu</p>
+							<div class="tombol-capt">
+								<a href="#" class="tombol1">Lebih lanjut</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="agenda">
+					<h1>AGENDA</h1>
+					<div class="isi-agenda">
+						<img src="asset/img/logo_sekolah.png">
+						<a href="#">Deklarasi Sekolah Ramah Anak</a>
+					</div>
+					<div class="isi-agenda">
+						<img src="asset/img/logo_sekolah.png">
+						<a href="#">Pembagian Ijazah</a>
+					</div>
+					<div class="isi-agenda">
+						<img src="asset/img/logo_sekolah.png">
+						<a href="#">Pemberitahuan PPDB 2020/2021</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="gal-alamat">
+				<div class="galeri">
+					<h1>GALERI</h1>
+					<div class="isi-galeri">
+						<img src="asset/img/gl1.jpg">
+						<img src="asset/img/gl2.jpg">
+						<img src="asset/img/gl3.jpg">
+						<img src="asset/img/gl4.jpg">
+					</div>
+				</div> 
+				<div class="alamat">
+					<h1>ALAMAT</h1>
+					<div class="isi-alamat">
+						<div class="maps">
+							<h1>Space Maps</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<div class="kontak">
 				<div class="hal-umum">
 					<h3>Halaman Umum</h3>
@@ -120,7 +173,7 @@
 					<p>Email : info@smpn1cibadak.sch.id smpn1cbd_kabsi@yahoo.co.id</p>
 				</div>
 				<div class="sosial">
-					<h3>Halaman Umum</h3>
+					<h3>Social Link</h3>
 					<div class="fb">
 						<img src="asset/img/fb.png">
 					</div>
@@ -135,9 +188,7 @@
 		</div>
 
 		<div class="footer">
-			<div class="cp">
-				sdsad
-			</div>
+			<p>Copyright &copy; SMP Negeri 1 Cibadak</p>
 		</div>
 	</section>
 </body>
