--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<h1>PROFIL SEKOLAH</h1>
 					<div class="isi-profil">
 						<div class="video">
-							<h1>Space Video</h1>
+							<iframe width="100%" height="220" src="https://www.youtube.com/embed/M_c2Jcg4egY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 						<div class="capt">
 							<p>Di samping adalah profil sekolah kami secara keseluruhan dari mulai bagian depan hingga seluruh fasilitas yang terdapat disekolah kami kami akan memberikan yang terbaik untuk kenyamanan para siswa kami dalam menimba ilmu</p>
@@ -149,7 +149,7 @@
 					<h1>ALAMAT</h1>
 					<div class="isi-alamat">
 						<div class="maps">
-							<h1>Space Maps</h1>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.96837473556!2d106.79039471431688!3d-6.894386269382046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68316af442641b%3A0x96edb366f22211d5!2sSMP%20Negeri%201%20CIBADAK!5e0!3m2!1sen!2sid!4v1607085815460!5m2!1sen!2sid" width="100%" height="385" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 						</div>
 					</div>
 				</div>
